# Riot-API-Practice

./: .gitignore  CMakeLists.txt  ChampMap.hpp  ChampMastery.cpp  ChampMastery.hpp  MatchData.hpp  MatchSummary.hpp  RiotAPI.cpp  RiotAPI.hpp  StatsAnalyzer.cpp  StatsAnalyzer.hpp  main.cpp
HTML/: index.html
HTML/JS/: app.js
